added contato.html and servicos.html, servicos html complete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <section class=".content">
+    <section class="content">
 
         <div class="banner">
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</h3>
@@ -31,7 +31,7 @@
             <img src="img/Dog_walking.svg" alt="Cachorrinho">
         </div>
 
-        <div class="servicos">
+        <div class="servicosindex">
             <h2>Serviços</h2>
 
             <div class="servicosDisplay">
