--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <img src="img/Petshop DH-logo-white.svg" alt="Logo Petshop DH">
         </div>
 
-        <div class="headerLinks">
+        <nav class="headerLinks">
             <a href="">Sobre</a>
-            <a href="">Serviços</a>
-            <a href="">Contato</a>
+            <a href="servicos.html">Serviços</a>
+            <a href="contato.html">Contato</a>
             <a href="">Login</a>
-        </div>
+        </nav>
     </header>
 
     <section class="content">
@@ -31,7 +31,7 @@
             <img src="img/Dog_walking.svg" alt="Cachorrinho">
         </div>
 
-        <div class="servicosindex">
+        <section class="servicos">
             <h2>Serviços</h2>
 
             <div class="servicosDisplay">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <div class="lowerSection">
             <img src="img/good_doggy.svg" alt="Cachorrinhooo OwO">
