servicos page done

--- a/servicos.html
+++ b/servicos.html
@@ -40,6 +40,7 @@
                     <ul>
                         <li>
                             <h2>Banho completo</h2>
+                            <h3>R$40,00</h3>
                         </li>
                         <li>
                             <p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
@@ -48,7 +49,7 @@
                                 nesciunt.
                             </p>
                         </li>
-                        <li><button>Agendar</button></li>
+                        <li><button>agendar</button></li>
                     </ul>
                 </div>
             </div>
@@ -74,7 +75,7 @@
                                 nesciunt.
                             </p>
                         </li>
-                        <li><button>Agendar</button></li>
+                        <li><button>agendar</button></li>
                     </ul>
                 </div>
             </div>
@@ -100,7 +101,7 @@
                                 nesciunt.
                             </p>
                         </li>
-                        <li><button>Agendar</button></li>
+                        <li><button>agendar</button></li>
                     </ul>
                 </div>
             </div>
