worked on contato.html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header>
         <div class="headerLogo">
             <h1 class="sr-only">Petshop DH</h1>
-            <img src="img/Petshop DH-logo-white.svg" alt="Logo Petshop DH">
+            <a href="index.html"><img src="img/Petshop DH-logo-white.svg" alt="Logo Petshop DH"></a>
         </div>
 
         <nav class="headerLinks">
             <a href="">Sobre</a>
             <a href="servicos.html">Serviços</a>
             <a href="contato.html">Contato</a>
-            <a href="">Login</a>
+            <a href="login.html">Login</a>
         </nav>
     </header>
 
