--- a/servicos.html
+++ b/servicos.html
@@ -14,18 +14,18 @@
     <header>
         <div class="headerLogo">
             <h1 class="sr-only">Petshop DH</h1>
-            <img src="img/Petshop DH-logo-white.svg" alt="Logo Petshop DH">
+            <a href="index.html"><img src="img/Petshop DH-logo-white.svg" alt="Logo Petshop DH"></a>
         </div>
 
-        <div class="headerLinks">
+        <nav class="headerLinks">
             <a href="">Sobre</a>
-            <a href="">Serviços</a>
-            <a href="">Contato</a>
-            <a href="">Login</a>
-        </div>
+            <a href="servicos.html">Serviços</a>
+            <a href="contato.html">Contato</a>
+            <a href="login.html">Login</a>
+        </nav>
     </header>
 
-    <section class="content">
+    <section class="content servicos">
         <h2 class="servicosTitle">Serviços</h2>
 
         <div class="servicoList">
