login n register pages complete

--- a/cadastro.html
+++ b/cadastro.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <section class="content login">
+    <section class="content register">
 
         <img src="img/personal_info.svg" alt="">
 
