mapa adicionado ao footer, site completo

--- a/servicos.html
+++ b/servicos.html
@@ -129,7 +129,7 @@
             </div>
 
             <div class="map">
-                mapa
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d228.39650465694496!2d-46.524166455843456!3d-23.663650369914052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce427d0e88215d%3A0xdb4946be55fbe704!2sR.%20Cel.%20Ortiz%2C%20267%20-%20Centro%2C%20Santo%20Andr%C3%A9%20-%20SP%2C%2009015-535!5e0!3m2!1spt-BR!2sbr!4v1632501640043!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
         </div>
